# fastapi-cicd-demo

./: .dockerignore  .flask8  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: main.py
app/routers/: health.py
app/services/: calculator.py
tests/: conftest.py  test_calculator.py  test_health.py
